--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^6.3.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.2",
